fin de la partie graphique et des animations de AjoutPublication

--- a/Moncss.css
+++ b/Moncss.css
@@ -15,5 +15,16 @@
 
 }
 .submitnojs{
-    display : none;
 }
+.Monsucces{
+ display: none;  
+    
+}
+.Moninfo{
+ display: none;  
+    
+}
+.Mondanger{
+ display: none;  
+    
+ }
